refactor: centralize casing via NamingConvention enum and standardize all codegens
Introduce a NamingConvention enum (CAMEL_CASE, PASCAL_CASE, SNAKE_CASE,
KEBAB_CASE, UPPER_SNAKE_CASE, IDENTITY) to replace scattered StringUtils
calls across all 6 language codegens. Each codegen now declares its
conventions as static fields at the top of the class.

Additional improvements:
- Add comprehensive Javadoc to all codegen classes and methods
- Replace File.separator concatenation with Path.of().toString()
- Add final to all non-reassigned local variables
- Extract stripPrimitiveParent() to AbstractBetterCodegen using Optional
- Fix cleanupBadImports to handle both Python and Java import formats
- Fix Java formatter Docker image (alpine has no ARM64 support)
- Remove unnecessary @SuppressFBWarnings from Ruby codegen
- Remove C# escapeUnsafeCharacters no-op override
- Remove Node private toKebabCase/toPascalCase helpers
- Rewrite PHP escapeText with Optional

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>